# Liberal-Crime-Squad

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COMPILE_README.txt  ChangeLog  INSTALL  LCSConfig.h.in  LINUX_README.txt  Makefile  Makefile.am  NEWS  README  README.md  TODO  bootstrap  config.h  configure.ac  crimesquad.desktop  cursesgraphics.h  game.cpp  game.dsp  game.sln  game.vcproj  gamelog.txt  init.txt  release_notes.txt
branches/31104branch/src/: Makefile.am  config.cpp  config.h  configfile.cpp  configfile.h  cursesgraphics.cpp  cursesgraphics.h  cursesmovie.cpp  cursesmovie.h  externs.h  game.cpp  includes.h  lcsio.cpp  lcsio.h  organization.cpp  organization.h  organizationdef.cpp  organizationdef.h  orghandler.cpp  serializer.cpp  serializer.h
branches/reddawn/: LINUX_README.txt  Makefile.am  README  configure.ac  conflict-find.sh
branches/reddawn/art/: armors.xml  clips.xml  loot.xml  mapCSV_Bank_Tiles.csv  mapCSV_BombShelter_Tiles.csv  mapCSV_Bunker_Specials.csv  mapCSV_NuclearPlant_Specials.csv  mapCSV_WhiteHouse2_Tiles.csv  pawnshop.xml  vehicles.xml  weapons.xml
branches/reddawn/dev/: maps.dam  maps.dam.bak  tiles.psd
lib/pdcurses/: Makefile.am
src/: Makefile.am  common.h  compat.cpp  compat.h  configfile.cpp  configfile.h  cursesgraphics.cpp  cursesgraphics.h  cursesgraphics_test.c  cursesmovie.cpp  cursesmovie.h  dumpcaps.cpp  externs.h  game.cpp  game.dsw  globals.cpp  includeActivate.h  includeActivateB.h  includeAdvance.h  includeAdvanceB.h  includeCommon.h  includeCommonCommon.h  includeCreatures.h  includeDefault.h  includeEnum.h  includeEnum2.h  includeEnum3.h  includeExternDefault.h  includeExternPolitics.h  includeFunctions.h  includeItems.h  includeNews.h  includePolitics.h  includeTalk.h  includeTempFunctions.h  includeTitle.h  includes.h  lcsio.cpp  lcsio.h  locationdef.h
src/basemode/: activate.cpp  activate.h  activate_sleepers.cpp  activate_sleepers.h  baseactions.cpp  basemode.cpp  liberalagenda.cpp  reviewmode.cpp  reviewmode.h
src/cmarkup/: Markup.cpp  Markup.h
src/combat/: chase.cpp  chase.h  fight.cpp  fight.h  haulkidnap.cpp  haulkidnap.h
src/common/: commonactions.cpp  commonactions.h  commondisplay.cpp  commondisplay.h  consolesupport.cpp  consolesupport.h  creature.cpp  creature.h  equipment.cpp  equipment.h  getnames.cpp  getnames.h  help.cpp  help.h  interval.cpp  interval.h  misc.cpp  stringconversion.cpp  stringconversion.h  translateid.cpp  translateid.h
src/creature/: attributes.cpp  attributes.h  augmentation.cpp  augmentation.h  augmenttype.cpp  augmenttype.h  creature.cpp  creature.h  creaturenames.cpp  creaturetype.cpp  creaturetype.h  creaturetypecache.cpp  creaturetypecache.h  creaturetypes.cpp  gender.h  pool.cpp  skill.cpp  skill.h
src/daily/: activities.cpp  activities.h  daily.cpp  daily.h  date.cpp  date.h  interrogation.cpp  news.cpp  recruit.cpp  recruit.h  shopsnstuff.cpp  shopsnstuff.h  siege.cpp  siege.h
src/items/: armor.cpp  armor.h  armortype.cpp  armortype.h  clip.cpp  clip.h  cliptype.cpp  cliptype.h  item.cpp  item.h  itemtype.cpp  itemtype.h  loot.cpp  loot.h  loottype.cpp  loottype.h  money.cpp  money.h  weapon.cpp  weapon.h  weapontype.cpp  weapontype.h
src/locations/: locations.cpp  locations.h  world.cpp  world.h
src/log/: log.cpp  log.h
src/monthly/: endgame.cpp  justice.cpp  justice.h  lcsmonthly.cpp  lcsmonthly.h  monthly.cpp  monthly.h  sleeper_update.cpp  sleeper_update.h  sleepers.cpp  sleepers.h
src/news/: ads.cpp  filler.cpp  headline.cpp  layout.cpp  majorevent.cpp  news.cpp  news.h  newsfuncs.cpp  squadstory_text.cpp
src/pdcurses/: curses.h
src/politics/: alignment.cpp  alignment.h  amendments.cpp  amendments.h  law.cpp  law.h  politics.cpp  politics.h
src/sandbox/: creature_factory_test.cpp  creature_namegen_test.cpp  creature_test.cpp  creature_test.h  globals.h  injury_test.h  lcscommon.h  saveload_boost.cpp  weapon.h
src/sdl/: SDL2.exp  SDL2.lib  SDL2main.lib  SDL2test.lib  SDL_main.h
src/sitemode/: advance.cpp  mapspecials.cpp  miscactions.cpp  newencounter.cpp  newencounter.h  shop.cpp  shop.h  sitedisplay.cpp  sitemap.cpp  sitemap.h  sitemode.cpp  sitemode.h  stealth.cpp  stealth.h  talk.cpp
src/title/: highscore.cpp  highscore.h  initfile.cpp  locations.cpp  newgame.cpp  saveload.cpp  titlescreen.cpp
src/vehicle/: vehicle.cpp  vehicle.h  vehicletype.cpp  vehicletype.h
tags/31101/: TODO  configure.ac
tags/31101/src/: Makefile.am  (+4 more)
tests/: Makefile.am  test-lcs.cpp
tests/common/: test-interval.cpp
tests/creature/: test-attributes.cpp  test-creaturetype.cpp  test-creaturetypecache.cpp  test-skill.cpp  test-uniquecreatures.cpp
tests/politics/: test-alignment.cpp
tests/vehicle/: test-vehicletype.cpp
trunk/: AUTHORS  ChangeLog  INSTALL  LINUX_README.txt  Makefile.am  NEWS  README  THANKS  TODO  compat.cpp  configure.ac  game.cpp  lcsio.cpp
trunk/art/: armors.xml  armsdealer.xml  clips.xml  creatures.xml  defeat.mid  deptstore.xml  footchase.mid  glamshow.cmv  items.xml  largecap.cpc  licenses.txt  loot.xml  mapCSV_BarAndGrill_Tiles.csv  mapCSV_Bunker_Specials.csv  mapCSV_Bunker_Tiles.csv  mapCSV_WhiteHouse2_Specials.csv  mapCSV_WhiteHouse2_Tiles.csv  mapCSV_WhiteHouse_Specials.csv  mapCSV_WhiteHouse_Tiles.csv  masks.xml  newstops.cpc  oubliette.xml  pawnshop.xml  sitemaps.txt  stalinized.mid  vehicles.xml  weapons.xml
trunk/dev/: LCScrime.html  Liberal Crime Squad - LRH  abortiondoc.txt  book.cpp  compat.cpp  cpc.cpp  lawrefrence.cpp  lcs_block_font.txt  lcsendian.h  locationtype.cpp  locationtype.h  maps.dam  maps.dam.bak  national_anthem_lyrics.txt  newgame.diff  tiles.psd
trunk/docs/: CrimeSquadManual.txt  conventions.txt  cpcimageformat.txt
trunk/src/: Makefile.am  common.h  compat.cpp  compat.h  configfile.cpp  configfile.h  cursesgraphics.cpp  cursesgraphics.h  cursesgraphics_test.c  cursesmovie.cpp  cursesmovie.h  dumpcaps.cpp  endian.cpp  externs.h  game.cpp  includes.h  lcsio-old.h  lcsio.cpp  lcsio.h  vector.h
trunk/workspaces/: game.cbp  game.ncb  game.sln  game.vcproj  game.vcxproj  help.cpp  lcs_news_icon.rc
(+698 files in other folders)
