SUBDIRS = src
lcsdir = $(datadir)/lcs
artdir = $(lcsdir)/art
appdir = $(datadir)/applications

dist_art_DATA = art/abort.cmv  art/glamshow.cmv  art/largecap.cpc  art/newspic.cpc\
 art/anchor.cmv  art/lacops.cmv    art/newscast.cmv  art/newstops.cpc\
 art/clips.xml  art/weapons.xml art/deptstore.xml  art/loot.xml  art/vehicles.xml\
 art/armors.xml  art/masks.xml  art/pawnshop.xml  art/armsdealer.xml  art/sitemaps.txt\
 art/oubliette.xml art/creatures.xml\
 art/mapCSV_Bank_Specials.csv  art/mapCSV_Bank_Tiles.csv\
 art/mapCSV_NuclearPlant_Specials.csv  art/mapCSV_NuclearPlant_Tiles.csv\
 art/mapCSV_Courthouse_Specials.csv  art/mapCSV_Courthouse_Tiles.csv\
 art/mapCSV_Bunker_Specials.csv  art/mapCSV_Bunker_Tiles.csv\
 art/mapCSV_BombShelter_Specials.csv  art/mapCSV_BombShelter_Tiles.csv\
 art/mapCSV_BarAndGrill_Specials.csv  art/mapCSV_BarAndGrill_Tiles.csv\
 art/mapCSV_WhiteHouse_Specials.csv  art/mapCSV_WhiteHouse_Tiles.csv\
 art/mapCSV_WhiteHouse2_Specials.csv  art/mapCSV_WhiteHouse2_Tiles.csv\
 art/mapCSV_WhiteHouse3_Specials.csv  art/mapCSV_WhiteHouse3_Tiles.csv

dist_app_DATA = crimesquad.desktop

#man_MANS = man/crimesquad.6
dist_man_MANS = man/crimesquad.6
EXTRA_DIST = TODO workspaces/game.dsp workspaces/game.dsw workspaces/game.ncb\
 workspaces/game.sln workspaces/game.suo workspaces/game.vcproj LINUX_README.txt\
 docs/CrimeSquadManual.txt workspaces/game.cbp docs/cpcimageformat.txt\
 docs/conventions.txt
