SUBDIRS = src
lcsdir = $(datadir)/lcs
artdir = $(lcsdir)/art

dist_art_DATA = art/abort.cmv  art/glamshow.cmv  art/largecap.cpc  art/newspic.cpc\
 art/anchor.cmv  art/lacops.cmv    art/newscast.cmv  art/newstops.cpc

#man_MANS = man/crimesquad.6
dist_man_MANS = man/crimesquad.6
EXTRA_DIST = TODO workspaces/game.dsp workspaces/game.dsw workspaces/game.ncb\
 workspaces/game.sln workspaces/game.suo workspaces/game.vcproj LINUX_README.txt\
 docs/CrimeSquadManual.txt workspaces/game.cbp
