SUBDIRS = src
lcsdir = $(datadir)/lcs
artdir = $(lcsdir)/art
appdir = $(datadir)/applications

dist_art_DATA = art/abort.cmv art/anchor.cmv art/glamshow.cmv art/lacops.cmv\
 art/newscast.cmv\
 \
 art/largecap.cpc art/newspic.cpc art/newstops.cpc\
 \
 art/armors.xml art/armsdealer.xml art/clips.xml art/creatures.xml\
 art/deptstore.xml art/loot.xml art/masks.xml art/oubliette.xml\
 art/pawnshop.xml art/vehicles.xml art/weapons.xml\
 \
 art/sitemaps.txt\
 \
 art/mapCSV_Bank_Specials.csv art/mapCSV_Bank_Tiles.csv\
 art/mapCSV_BarAndGrill_Specials.csv art/mapCSV_BarAndGrill_Tiles.csv\
 art/mapCSV_BombShelter_Specials.csv art/mapCSV_BombShelter_Tiles.csv\
 art/mapCSV_Bunker_Specials.csv art/mapCSV_Bunker_Tiles.csv\
 art/mapCSV_Courthouse_Specials.csv art/mapCSV_Courthouse_Tiles.csv\
 art/mapCSV_NuclearPlant_Specials.csv art/mapCSV_NuclearPlant_Tiles.csv\
 art/mapCSV_WhiteHouse_Specials.csv art/mapCSV_WhiteHouse_Tiles.csv\
 art/mapCSV_WhiteHouse2_Specials.csv art/mapCSV_WhiteHouse2_Tiles.csv\
 art/mapCSV_WhiteHouse3_Specials.csv art/mapCSV_WhiteHouse3_Tiles.csv\
 \
 art/abort.mid art/activate.mid art/alarmed.mid art/anchor.mid\
 art/basemode.mid art/carchase.mid art/cartheft.mid art/dating.mid\
 art/defeat.mid art/disbanded.mid art/elections.mid art/finances.mid\
 art/footchase.mid art/glamshow.mid art/heavycombat.mid art/interrogation.mid\
 art/lacops.mid art/liberalagenda.mid art/newgame.mid art/newscast.mid\
 art/newspaper.mid art/reaganified.mid art/recruiting.mid art/reviewmode.mid\
 art/shopping.mid art/siege.mid art/sitemode.mid art/sleepers.mid\
 art/stalinized.mid art/stopevil.mid art/suspicious.mid art/titlemode.mid\
 art/trial.mid art/victory.mid


dist_app_DATA = crimesquad.desktop

#man_MANS = man/crimesquad.6
dist_man_MANS = man/crimesquad.6
EXTRA_DIST = TODO workspaces/game.dsp workspaces/game.dsw workspaces/game.ncb\
 workspaces/game.sln workspaces/game.suo workspaces/game.vcxproj\
 LINUX_README.txt docs/CrimeSquadManual.txt workspaces/game.cbp\
 docs/cpcimageformat.txt docs/conventions.txt README COPYING
