bin_PROGRAMS = crimesquad 
crimesquad_SOURCES = game.cpp lcsio.cpp cursesmovie.cpp compat.cpp cursesgraphics.cpp\
 lcsio.h cursesmovie.h compat.h cursesgraphics.h includes.h externs.h\
 common/commondisplay.cpp common/commonactions.cpp common/consolesupport.cpp\
 common/getnames.cpp common/translateid.cpp common/equipment.cpp common/creature.cpp\
 title/titlescreen.cpp title/highscore.cpp title/newgame.cpp title/saveload.cpp\
 basemode/basemode.cpp basemode/baseactions.cpp basemode/activate.cpp \
 basemode/reviewmode.cpp sitemode/advance.cpp sitemode/mapspecials.cpp \
 sitemode/newencounter.cpp sitemode/sitemode.cpp sitemode/talk.cpp sitemode/map.cpp\
 sitemode/miscactions.cpp sitemode/sitedisplay.cpp sitemode/stealth.cpp combat/chase.cpp\
 combat/fight.cpp combat/haulkidnap.cpp daily/activities.cpp daily/daily.cpp\
 daily/date.cpp daily/news.cpp daily/shopsnstuff.cpp daily/siege.cpp monthly/endgame.cpp\
 monthly/justice.cpp monthly/lcsmonthly.cpp monthly/monthly.cpp monthly/politics.cpp\
 daily/interrogation.cpp daily/recruit.cpp

crimesquad_CPPFLAGS = -DINSTALL_DATA_DIR=\"$(datadir)\"
crimesquad_CXXFLAGS = -I$(top_srcdir)/src
